# minecraft

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  build.bat  build.sh
.devcontainer/: devcontainer.json
inc/darkcraft/: camera.h  chunk.h  gui.h  sky.h  world.h
inc/minecraft/: camera.h  chunk.h  gl.h  gui.h  sky.h  world.h
res/: charset_fs.glsl  charset_vs.glsl  chunk_fs.glsl  chunk_vs.glsl  sky_fs.glsl  sky_vs.glsl
src/: camera.c  camera.h  chunk.c  chunk.h  gl.c  gl.h  gui.c  lighting.c  main.c  sky.c  sky.h  world.c  world.h
